--- a/Branch.App/Branch.App.csproj
+++ b/Branch.App/Branch.App.csproj
@@ -23,20 +23,20 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'LocalDebug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;LOCAL;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'RemoteRelease|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE;RELEASE;</DefineConstants>
+    <DefineConstants>TRACE;REMOTE;RELEASE;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -506,10 +506,13 @@
     <Content Include="Areas\Identity\Views\Shared\IdentityHeader.cshtml" />
     <Content Include="Views\Session\Create.cshtml" />
     <Content Include="Areas\Domain\Views\web.config" />
+    <Content Include="Areas\Identity\Views\Home\Index.cshtml" />
     <None Include="Content\Styles\Areas\Halo4\_game_history.scss" />
     <Compile Include="Areas\Identity\Controllers\CreateController.cs" />
-    <Compile Include="Areas\Identity\Controllers\ViewController.cs" />
+    <Compile Include="Areas\Identity\Controllers\HomeController.cs" />
     <Compile Include="Areas\Identity\Filters\ValidateBranchIdentity.cs" />
+    <Compile Include="Areas\Identity\Models\Enums\CurrentPage.cs" />
+    <Compile Include="Areas\Identity\Models\HomeIdentityViewModel.cs" />
     <Compile Include="Controllers\SessionController.cs" />
     <Compile Include="Areas\Identity\IdentityAreaRegistration.cs" />
     <Compile Include="Areas\Identity\Models\CreateSessionViewModel.cs" />
@@ -658,7 +661,6 @@
     <Folder Include="Areas\Domain\Models\" />
     <Folder Include="Areas\Domain\Views\Home\" />
     <Folder Include="Areas\Domain\Views\Shared\" />
-    <Folder Include="Areas\Identity\Views\View\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -746,19 +748,10 @@
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'TCRelease|AnyCPU'">
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'RemoteDebug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE;REMOTEDEBUG</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;REMOTE;</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -766,7 +759,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LocalRelease|AnyCPU'">
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE;RELEASE;LOCALRELEASE;</DefineConstants>
+    <DefineConstants>TRACE;LOCAL;RELEASE;</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
