--- a/Branch.Models/Branch.Models.csproj
+++ b/Branch.Models/Branch.Models.csproj
@@ -15,36 +15,27 @@
     <RestorePackages>true</RestorePackages>
     <ProjectConfigFileName>App.Config</ProjectConfigFileName>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'LocalDebug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;LOCAL;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'RemoteRelease|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;REMOTE;RELEASE;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'TCRelease|AnyCPU'">
-    <OutputPath>bin\TCRelease\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'RemoteDebug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\RemoteDebug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;REMOTE;</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -52,7 +43,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LocalRelease|AnyCPU'">
     <OutputPath>bin\LocalRelease\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;LOCAL;RELEASE;</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -127,6 +118,18 @@
     <Compile Include="Migrations\201410271258212_Created Branch Models, added relationships.Designer.cs">
       <DependentUpon>201410271258212_Created Branch Models, added relationships.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410281038266_Aduit Information to Models.cs" />
+    <Compile Include="Migrations\201410281038266_Aduit Information to Models.Designer.cs">
+      <DependentUpon>201410281038266_Aduit Information to Models.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201410281043396_Remove Example Default SQL Value.cs" />
+    <Compile Include="Migrations\201410281043396_Remove Example Default SQL Value.Designer.cs">
+      <DependentUpon>201410281043396_Remove Example Default SQL Value.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201411031725222_Added Invite Models.cs" />
+    <Compile Include="Migrations\201411031725222_Added Invite Models.Designer.cs">
+      <DependentUpon>201411031725222_Added Invite Models.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\343\Halo4Waypoint.cs" />
@@ -136,11 +139,14 @@
     <Compile Include="Services\HostIp\Response.cs" />
     <Compile Include="Sql\Authentication.cs" />
     <Compile Include="Sql\BranchIdentity.cs" />
+    <Compile Include="Sql\BranchIdentityInvitation.cs" />
     <Compile Include="Sql\BranchRole.cs" />
     <Compile Include="Sql\BranchSession.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Sql\DatabaseContext.cs" />
+    <Compile Include="Sql\Audit.cs" />
+    <Compile Include="Sql\IGameSpecificIdentity.cs" />
     <Compile Include="Sql\ReachIdentity.cs" />
     <Compile Include="Sql\Halo4Identity.cs" />
     <Compile Include="Sql\GamerIdentity.cs" />
@@ -172,6 +178,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201410271258212_Created Branch Models, added relationships.resx">
       <DependentUpon>201410271258212_Created Branch Models, added relationships.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410281038266_Aduit Information to Models.resx">
+      <DependentUpon>201410281038266_Aduit Information to Models.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410281043396_Remove Example Default SQL Value.resx">
+      <DependentUpon>201410281043396_Remove Example Default SQL Value.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201411031725222_Added Invite Models.resx">
+      <DependentUpon>201411031725222_Added Invite Models.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
