--- a/package.json
+++ b/package.json
@@ -1,71 +1,74 @@
 {
-  "name": "app-home",
-  "version": "2.0.0",
-  "author": {
-    "name": "Alex Forbes-Reed",
-    "email": "branch-app@alx.red",
-    "url": "https://alx.red/"
-  },
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/branch-app/app-home"
-  },
-  "license": "DBAD",
-  "scripts": {
-    "build": "rm -rf ./build && babel ./src --out-dir=build --source-maps --copy-files --quiet",
-    "debug": "npm run transpile && nodemon --exec babel-node -- src/boot/debug.js",
-    "start": "node ./build/boot/start.js",
-    "transpile": "gulp"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "body-parser": "^1.17.1",
-    "cuvva-log": "^0.9.1",
-    "cuvva-log-sentry": "^0.5.2",
-    "express": "^4.15.2",
-    "express-hbs": "^1.0.4",
-    "express-promise-router": "^1.1.1",
-    "jquery": "^3.2.1",
-    "json-client": "^0.8.4",
-    "moment-timezone": "^0.5.13",
-    "query-string": "^4.3.4",
-    "raven": "^2.0.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.3.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-import": "^2.2.0",
-    "glob": "^7.1.1",
-    "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
-    "merge-stream": "^1.0.1",
-    "nodemon": "^1.11.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-2"
-    ],
-    "plugins": [
-      "typecheck",
-      "syntax-flow",
-      "transform-flow-strip-types",
-      "transform-class-properties"
-    ]
-  }
+	"name": "app-home",
+	"version": "2.0.0",
+	"author": {
+		"name": "Alex Forbes-Reed",
+		"email": "branch-app@alx.red",
+		"url": "https://alx.red/"
+	},
+	"private": false,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/branch-app/app-home"
+	},
+	"license": "DBAD",
+	"scripts": {
+		"build": "rm -rf ./build && babel ./src --out-dir=build --source-maps --copy-files --quiet",
+		"debug": "npm run transpile && nodemon --exec babel-node -- src/boot/debug.js",
+		"start": "node ./build/boot/start.js",
+		"transpile": "gulp"
+	},
+	"dependencies": {
+		"babel-polyfill": "^6.23.0",
+		"body-parser": "^1.17.1",
+		"cuvva-log": "^0.9.1",
+		"cuvva-log-sentry": "^0.5.2",
+		"express": "^4.15.2",
+		"express-hbs": "^1.0.4",
+		"express-promise-router": "^1.1.1",
+		"jquery": "^3.2.1",
+		"json-client": "^0.8.4",
+		"moment-timezone": "^0.5.13",
+		"query-string": "^4.3.4",
+		"raven": "^2.0.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-eslint": "^7.2.3",
+		"babel-plugin-syntax-flow": "^6.18.0",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-flow-strip-types": "^6.22.0",
+		"babel-plugin-typecheck": "^3.9.0",
+		"babel-preset-env": "^1.4.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
+		"babelify": "^7.3.0",
+		"browserify": "^14.3.0",
+		"eslint": "^3.19.0",
+		"eslint-plugin-babel": "^4.1.1",
+		"eslint-plugin-flowtype": "^2.32.1",
+		"eslint-plugin-import": "^2.2.0",
+		"glob": "^7.1.1",
+		"gulp": "^3.9.1",
+		"gulp-browserify": "^0.5.1",
+		"gulp-sass": "^3.1.0",
+		"gulp-sourcemaps": "^2.6.0",
+		"gulp-uglify": "^2.1.2",
+		"merge-stream": "^1.0.1",
+		"nodemon": "^1.11.0",
+		"vinyl-buffer": "^1.0.0",
+		"vinyl-source-stream": "^1.1.0"
+	},
+	"babel": {
+		"presets": [
+			"es2015",
+			"stage-2"
+		],
+		"plugins": [
+			"typecheck",
+			"syntax-flow",
+			"transform-flow-strip-types",
+			"transform-class-properties"
+		]
+	}
 }
